<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="facebook_app_id">1470915723163838</string>
    <string name="app_name">Hitch</string>
    <string name="app_birth">Choose if you want to be a hitchhiker or a driver\n(this can always be changed later)</string>
    <string name="app_register">Choose to fill in, or login with facebook</string>
    <string name="phone_nr">Phone number</string>
    <string name="hiker">Hiker</string>
    <string name="driver">Driver</string>
    <string name="already_registered">Already registered?</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_routeActivity">Route activity</string>
    <string name="action_profile">Edit profile</string>
    <string name="action_profileView">View profile</string>
    <string name="action_chat">Open chat</string>
    <string name="action_signout">Sign out</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_route">RouteActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_expandable_list">ExpandableList ROUTES</string>
    <string name="logo">logo</string>
    <string name="icon_content_description">icon_content_description</string>
    <string name="stars_content_description">stars_content_description</string>
    <string name="arrow_content_description">arrow_content_description</string>
</resources>
