<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".BirthActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/app_birth"
            android:id="@+id/textView2" android:layout_alignParentStart="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startAsHiker"
            android:text="@string/hiker"
            android:id="@+id/button"
            android:layout_below="@+id/textView2" android:layout_alignParentStart="true"
            android:layout_marginTop="69dp" android:layout_alignEnd="@+id/textView2"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startAsDriver"
            android:text="@string/driver"
            android:id="@+id/button2" android:layout_centerVertical="true" android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/button"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/already_registered"
            android:id="@+id/textView3"
            android:layout_marginTop="54dp" android:layout_below="@+id/button2" android:layout_centerHorizontal="true"/>
    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button3" android:layout_below="@+id/textView3" android:layout_centerHorizontal="true"/>


</RelativeLayout>
