<?xml version="1.0" encoding="utf-8"?>
<!-- the parent view - provides the gray listfragment background color -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@color/frame_background"
                android:padding="5dp" >

    <!-- the innner view - provides the white rectangle -->
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame" android:paddingTop="5dp" android:paddingBottom="5dp">

        <!-- the icon view -->
        <TextView android:id="@+id/tvRouteName"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="@android:style/TextAppearance.Large"
                  android:layout_marginLeft="20dp"/>

        <ImageView android:id="@+id/ivIcon"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:padding="5dp"
                   android:contentDescription="@string/icon_content_description"
                   android:scaleType="fitXY"
                   android:layout_below="@+id/tvRouteName"/>

        <!-- the container view for the title and description and star-rating -->
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/ivIcon"
                        android:layout_centerVertical="true"
                        android:layout_below="@+id/tvRouteName"
                        android:layout_marginTop="10dp">

            <!-- the title view -->
            <TextView android:id="@+id/tvName"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textAppearance="@android:style/TextAppearance.Medium" />

            <!-- the description view -->
            <TextView android:id="@+id/tvTime"
                      android:layout_below="@id/tvName"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textAppearance="@android:style/TextAppearance.Small" />

            <ImageView android:id="@+id/ivStars"
                      android:layout_below="@id/tvName"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:contentDescription="@string/stars_content_description"
                      android:textAppearance="@android:style/TextAppearance.Small"
                      android:layout_marginLeft="40dp"
                      android:layout_marginTop="3dp"/>
        </RelativeLayout>

        <ImageView android:id="@+id/ivArrow"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:contentDescription="@string/arrow_content_description"
                   android:textAppearance="@android:style/TextAppearance.Small" android:layout_alignParentEnd="true"
                   android:layout_marginRight="20dp" android:layout_marginTop="30dp"/>
    </RelativeLayout>

</RelativeLayout>